--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
         "dev": "rimraf dist && run-p dev:webpack dev:electron",
         "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
         "dev:electron": "wait-on ./dist/index.html ./dist/main.js && electronmon .",
-        "build": "cross-env NODE_ENV=\"production\" webpack --progress"
+        "dev:web": "cross-env NODE_ENV=\"development\" webpack serve --config webpack.config.ts --config-name renderer",
+        "build": "cross-env NODE_ENV=\"production\" webpack --progress",
+        "build:web": "cross-env NODE_ENV=\"production\" webpack --config webpack.config.ts --config-name renderer"
     },
     "keywords": [],
     "author": "",
@@ -35,7 +37,8 @@
         "typescript": "^5.8.3",
         "wait-on": "^8.0.4",
         "webpack": "^5.101.0",
-        "webpack-cli": "^6.0.1"
+        "webpack-cli": "^6.0.1",
+        "webpack-dev-server": "^5.0.4"
     },
     "dependencies": {
         "react": "^19.1.1",
